# aquasense

./: CMakeLists.txt  build.sh
resources/: AShader  FragmentShader.frag  Square.shader  Triangle.shader  VertexShader.vert
src/: CMakeLists.txt  aquasense.c  aquasense.cpp  aquasense.h  deps.h  macros.h  objects.cpp  string_functions.cpp  string_functions.h
src/buffer/: buffer.c  buffer.h
src/buffers/: buffer.cpp  buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.c
src/camera/: camera.cpp  camera.h
src/cvec/: cvec.c  cvec.h
src/renderer/: renderer.cpp  renderer.h
src/shader/: shader.c  shader.h
src/str/: str.c  str.h
src/texture/: texture.c  texture.h
